# MusicGame

./: CMakeLists.txt  README.md
json/: level.json
src/: main.cpp
src/assets/: FontManager.cpp  FontManager.h  TextureManager.cpp  TextureManager.h
src/core/: App.cpp  App.h  Config.h  Context.h
src/game/: Chart.cpp  Chart.h  NoteSystem.cpp  NoteSystem.h  Scoring.cpp  Scoring.h
src/states/: GameState.cpp  GameState.h  MenuState.cpp  MenuState.h  SettingsState.cpp  SettingsState.h  TitleState.cpp  TitleState.h
src/utils/: IState.h  StateMachine.cpp  StateMachine.h
